version/0.85/_sources/autoapi/pyedb/component_libraries/ansys_components/ComponentPart.rst.txt






:class:`ComponentPart`
======================


.. py:class:: pyedb.component_libraries.ansys_components.ComponentPart(name, index, sbin_file)

   
   Handle component part definition.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ComponentPart

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~write_touchstone`
            - Export the component S-parameters to a Touchstone ``.s2p`` file.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~s_parameters`
            - Return a skrf.network.Network object.
          * - :py:attr:`~esr`
            - Return the equivalent serial resistor for capacitor only.
          * - :py:attr:`~f0`
            - Return the capacitor self resonant frequency in Hz.
          * - :py:attr:`~esl`
            - Return the equivalent serial inductor for capacitor only.
          * - :py:attr:`~cap_value`
            - Returns the capacitance value.
          * - :py:attr:`~ind_value`
            - Return the inductance value.


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - 
          * - :py:attr:`~nb_ports`
            - 
          * - :py:attr:`~nb_freq`
            - 
          * - :py:attr:`~ref_impedance`
            - 
          * - :py:attr:`~type`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.component_libraries.ansys_components import ComponentPart

Property detail
---------------

.. py:property:: s_parameters
   :type: skrf.network.Network


   
   Return a skrf.network.Network object.

   See `scikit-rf documentation <https://scikit-rf.readthedocs.io/en/latest/api/network.html#network-class>`_.















   ..
       !! processed by numpydoc !!

.. py:property:: esr
   :type: float


   
   Return the equivalent serial resistor for capacitor only.
















   ..
       !! processed by numpydoc !!

.. py:property:: f0
   :type: float


   
   Return the capacitor self resonant frequency in Hz.
















   ..
       !! processed by numpydoc !!

.. py:property:: esl
   :type: float


   
   Return the equivalent serial inductor for capacitor only.
















   ..
       !! processed by numpydoc !!

.. py:property:: cap_value
   :type: float


   
   Returns the capacitance value.
















   ..
       !! processed by numpydoc !!

.. py:property:: ind_value
   :type: float


   
   Return the inductance value.
















   ..
       !! processed by numpydoc !!



Attribute detail
----------------

.. py:attribute:: name

.. py:attribute:: nb_ports
   :value: 2


.. py:attribute:: nb_freq
   :value: 0


.. py:attribute:: ref_impedance
   :value: 50.0


.. py:attribute:: type
   :value: ''




Method detail
-------------

.. py:method:: write_touchstone(output_path: str) -> str

   
   Export the component S-parameters to a Touchstone ``.s2p`` file.

   The binary ``sdata.bin`` data is read on demand and then written to
   *output_path* using scikit-rf's Touchstone writer so the file can be
   consumed by the existing EDB S-parameter assignment pipeline.

   :Parameters:

       **output_path** : :class:`python:str`
           Destination file path.  The ``.s2p`` extension is appended
           automatically when *output_path* has no suffix.



   :Returns:

       :class:`python:str`
           Absolute path of the written Touchstone file.




   :Raises:

       :obj:`ImportError`
           If ``scikit-rf`` is not installed.






   .. rubric:: Examples

   part = lib.capacitors["Murata"]["GRM15"]["GRM155R71C104KA88"]
   path = part.write_touchstone("/tmp/GRM155R71C104KA88.s2p")

   ..
       !! processed by numpydoc !!




